@@ -2,10 +2,11 @@ CHANGES IN VERSION 1.1.12
 ------------------------
  o implement barplot for enrichResult <2012-03-18, Sun>
  o bug fixed for setReadable method <2012-03-19, Mon>
- o add logFC parameter for cnet plot, support color gene nodes by 
+ o add logFC parameter for cnet plot, support color gene nodes by
    their expression value (log fold change) <2012-03-21, Wed>
- o add mapping entrezgene ID and gene Name for organisms 
+ o add mapping entrezgene ID and gene Name for organisms
    other than human, mouse and yeast. <2012-03-22, Thu>
+ o bug fixed for attempt to name logFC, when it is NULL. <2012-03-22, Thu>
 
 CHANGES IN VERSION 1.1.11
 ------------------------
